[project]
name = "tirfsptdataprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.2",
    "datashader>=0.19.1",
    "fastparquet>=2026.5.0",
    "holoviews>=1.23.0",
    "jupyter>=1.1.1",
    "kaleido>=1.3.0",
    "lmfit>=1.3.4",
    "plotly>=6.8.0",
    "plotly-resampler>=0.11.0",
    "scipy>=1.18.0",
    "vegafusion>=2.0.3",
]
